--- a/hiket-wx/pages/index/index.wxml
+++ b/hiket-wx/pages/index/index.wxml
@@ -1,17 +1,40 @@
 <!--index.wxml-->
 <import src="../../template/index_sections/index_sections.wxml"/>
 
-<swiper class="swiper" indicator-dots="true" autoplay="true" interval="3000"
-        duration="1000">
-    <block wx:for="{{topBanner}}">
-        <swiper-item>
-            <image src="{{item}}" style="position:absolute;z-index:1"
-                   mode="aspectFill" class="slide-image"/>
-        </swiper-item>
-    </block>
-</swiper>
-
 <view class="page">
+
+    <view class='page_row'>
+        <view class="search">
+            <view class="search_arr">
+                <icon class="search_icon" size='20' type='search'></icon>
+                <input confirm-type="search" bindconfirm="bindSearch" class=""
+                       placeholder="请输入关键字" value="{{searchValue}}"
+                       bindinput='searchValueInput'/>
+            </view>
+        </view>
+    </view>
+
+    <view class='tab'>
+        <scroll-view scroll-x="true" class="tab-scroll" scroll-left="0">
+            <view class="tab-item active" data-current="0" bindtap="swichNav">首页</view>
+            <view class="tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="swichNav">生活家居</view>
+            <view class="tab-item {{currentTab==3?'active':''}}" data-current="3" bindtap="swichNav">美妆洗护</view>
+            <view class="tab-item {{currentTab==4?'active':''}}" data-current="4" bindtap="swichNav">学习书籍</view>
+            <view class="tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="swichNav">时尚穿搭</view>
+            <view class="tab-item {{currentTab==5?'active':''}}" data-current="5" bindtap="swichNav">生鲜零食</view>
+            <view class="tab-item {{currentTab==5?'active':''}}" data-current="5" bindtap="swichNav">体育数码</view>
+        </scroll-view>
+    </view>
+
+    <swiper class="swiper" indicator-dots="true" autoplay="true" interval="3000" duration="1000">
+        <block wx:for="{{topBanner}}">
+            <swiper-item>
+                <image src="{{item}}" style="position:absolute;z-index:1"
+                       mode="aspectFill" class="slide-image"/>
+            </swiper-item>
+        </block>
+    </swiper>
+
     <view style="background-color:#fff;padding:15rpx 0rpx">
         <!--显示分类-->
         <view style="width:720rpx;margin:10rpx 15rpx 7.5rpx 15rpx;display:flex">
