--- a/hiket-wx/pages/sections/sections.wxss
+++ b/hiket-wx/pages/sections/sections.wxss
@@ -24,7 +24,7 @@
   margin-top: 20rpx;
 }
 
-.searchcion {
+.search_icon {
   margin: 10rpx 10rpx 10rpx 10rpx;
   position: absolute;
   left: 25rpx;
