--- a/hiket-wx/pages/release/release.wxml
+++ b/hiket-wx/pages/release/release.wxml
@@ -85,7 +85,7 @@
     <view class='sell_cells'>
       <view class="sell_cell">
         <text class="sell_title">标签</text>
-        <input value="{{goodInfo.sectionTag}}" class="sell_input" placeholder="选择或输入标签" placeholder-class='placeholder' maxlength='8'/>
+        <input value="{{goodInfo.sectionTag}}" bindinput='sectionTagInput' class="sell_input" placeholder="选择或输入标签" placeholder-class='placeholder' maxlength='8'/>
         <picker style="flex:1;display:flex;justify-content:flex-end" bindchange="bindSectionTagChange" value="{{sectionTagId}}" range="{{sectionTags[sectionId]}}">
           <text class="sell_select">{{sectionTags[sectionId][sectionTagId]==""?"选择标签":sectionTags[sectionId][sectionTagId]}}</text>
         </picker>
