--- a/hiket-wx/pages/sections/sections.wxml
+++ b/hiket-wx/pages/sections/sections.wxml
@@ -1,17 +1,7 @@
 <!--pages/sections/sections.wxml-->
 <import src="../../template/img_col/img_col.wxml"/>
 <view class="page">
-    <view hidden='{{hideSearch}}' class='page_row'>
-        <view class="search">
-            <view class="search_arr">
-                <icon class="search_icon" size='20' type='search'></icon>
-                <input confirm-type="search" bindconfirm="bindSearch" class=""
-                       placeholder="请输入关键字" value="{{searchValue}}"
-                       bindinput='searchValueInput'/>
-            </view>
-        </view>
-    </view>
     <!--两栏展示商品-->
-    <template is="img_col" data="{{col1,col2,Loading}}"></template>
+    <template is="img_col" data="{{goods,Loading}}"></template>
     <!--两栏展示商品-->
 </view>
