--- a/hiket-wx/pages/mine/mine.wxss
+++ b/hiket-wx/pages/mine/mine.wxss
@@ -4,13 +4,13 @@
   display:flex;
   width: 100%;
   height: 450rpx;
-  background:linear-gradient(to right,rgb(242,61,88),rgb(255,111,110));
+  background:linear-gradient(to right,#FA4F7D,rgb(255,111,110));
   justify-content: center;
   align-items: cneter;
 }
 
 .mine_login_button {
-  background:linear-gradient(to right,rgb(255,111,110),rgb(242,61,88));
+  background:linear-gradient(to right,rgb(255,111,110),#FA4F7D);
   font-size: 13px;
 }
 
