--- a/hiket-wx/pages/good/good.wxml
+++ b/hiket-wx/pages/good/good.wxml
@@ -5,7 +5,7 @@
         <view>
             <swiper current="{{swiperCurrent}}" bindchange="swiperChange"
                     class="good_swiper">
-                <block wx:for="{{goodInfo.uploadImagePathList}}">
+                <block wx:for="{{goodInfo.uploadImagePathList}}" wx:key="{{index}}">
                     <swiper-item style="display:flex;justify-content:center">
                         <image src="{{item}}" mode='aspectFit'
                                style="width:100%;height:100%"
