--- a/hiket-wx/pages/index/index.wxml
+++ b/hiket-wx/pages/index/index.wxml
@@ -8,7 +8,7 @@
         <view class="search">
             <view class="search_arr">
                 <icon class="search_icon" size='20' type='search'></icon>
-                <input confirm-type="search" bindconfirm="bindSearch" class=""
+                <input confirm-type="search" bindconfirm="bindSearch"
                        placeholder="请输入关键字" value="{{searchValue}}"
                        bindinput='searchValueInput'/>
             </view>
@@ -19,11 +19,11 @@
     <view class='tab'>
         <scroll-view scroll-x="true" class="tab-scroll">
             <view class="tab-item {{currentTab==-1?'active':''}}"
-                  data-current="-1" bindtap="bindTab">首页
+                  data-current="-1" bindtap="bindTopTab">首页
             </view>
-            <view wx:for="{{sections}}"
+            <view wx:for="{{sections}}" wx:key="{{index}}"
                   class="tab-item {{currentTab==index?'active':''}}"
-                  data-current="{{index}}" bindtap="bindTab">{{item}}
+                  data-current="{{index}}" bindtap="bindTopTab">{{item}}
             </view>
         </scroll-view>
     </view>
@@ -32,7 +32,7 @@
     <view wx:if="{{currentTab==-1}}">
         <swiper class="swiper" indicator-dots="true"
                 autoplay="true" interval="3000" duration="1000">
-            <block wx:for="{{topBanner}}">
+            <block wx:for="{{topBanner}}" wx:key="{{index}}">
                 <swiper-item>
                     <image src="{{item}}" style="position:absolute;z-index:1"
                            mode="aspectFill" class="slide-image"/>
@@ -47,8 +47,9 @@
     <!--分类商品-->
     <view wx:else style="background-color: white">
         <view style="display: flex;justify-content:space-around;padding: 10rpx 0">
-            <view wx:for="{{sectionTags[currentTab]}}" wx:if="{{index<4}}"
-                  style="width: 120rpx;height: 160rpx;display: flex;flex-direction:column">
+            <view wx:for="{{sectionTags[currentTab]}}" wx:if="{{index<4}}" wx:key="{{index}}"
+                  style="width: 120rpx;height: 160rpx;display: flex;flex-direction:column"
+                  data-pattern="{{item}}" bindtap="bindTag">
                 <image style="width: 120rpx;height: 120rpx"
                        src="{{'../../images/index/tag/'+item+'.jpg'}}"
                        mode="scaleToFill"/>
@@ -58,10 +59,11 @@
             </view>
         </view>
         <view style="display: flex;justify-content:space-around;padding: 10rpx 0">
-            <view wx:for="{{sectionTags[currentTab]}}" wx:if="{{index>3}}"
+            <view wx:for="{{sectionTags[currentTab]}}" wx:if="{{index>3}}" wx:key="{{index}}"
                   style="width: 120rpx;height: 160rpx;display: flex;flex-direction:column">
                 <image style="width: 120rpx;height: 120rpx"
                        src="{{'../../images/index/tag/'+item+'.jpg'}}"
+                       data-pattern="{{item}}" bindtap="bindTag"
                        mode="scaleToFill"/>
                 <text style="width: 120rpx;color: darkgray;text-align: center">
                     {{item}}
