--- a/hiket-wx/pages/index/index.wxml
+++ b/hiket-wx/pages/index/index.wxml
@@ -17,11 +17,12 @@
     <!--搜索框-->
     <!--选项卡-->
     <view class='tab'>
-        <scroll-view scroll-x="true" class="tab-scroll">
+        <scroll-view scroll-x="true" class="tab-scroll"
+                     scroll-into-view="toptab_{{currentTab-2}}">
             <view class="tab-item {{currentTab==-1?'active':''}}"
-                  data-current="-1" bindtap="bindTopTab">首页
+                  data-current="-1" bindtap="bindTopTab" id="toptab_-1">嗨市首页
             </view>
-            <view wx:for="{{sections}}" wx:key="{{index}}"
+            <view wx:for="{{sections}}" wx:key="{{index}}" id="{{'toptab_'+index}}"
                   class="tab-item {{currentTab==index?'active':''}}"
                   data-current="{{index}}" bindtap="bindTopTab">{{item}}
             </view>
@@ -35,7 +36,7 @@
             <block wx:for="{{topBanner}}" wx:key="{{index}}">
                 <swiper-item>
                     <image src="{{item}}" style="position:absolute;z-index:1"
-                           mode="aspectFill" class="slide-image"/>
+                           mode="scaleToFill" class="slide-image"/>
                 </swiper-item>
             </block>
         </swiper>
