--- a/hiket-wx/pages/index/index.wxss
+++ b/hiket-wx/pages/index/index.wxss
@@ -11,39 +11,29 @@
 
 .recommend {
   display: flex;
-  width: 100%;
+  /* width: 100%; */
   height: 100rpx;
-  background: linear-gradient(to right, #FA4F7D, rgb(250, 166, 166));
+  /* background: linear-gradient(to right, #FA4F7D, rgb(250, 166, 166)); */
   align-items:center;
+  margin-top: 20rpx;
+  border-radius: 15rpx;
+  /* border: 2rpx solid #ff4f64; */
+}
+
+.recommend_img {
+  height: 50rpx;
+  width: 50rpx;
 }
 
 .recommend_text {
-  font-size: 50rpx;
+  font-size: 45rpx;
   flex: 1;
-  margin-left: 10rpx;
-}
-
-.mine_arrow{
-  margin-right:10rpx; 
-  width:10rpx;
-  zoom: 1.3;
-}
-
-/*伪元素实现右箭头*/
-.mine_arrow:after{
-  content: " ";
-  display: inline-block;
-  height:20rpx;
-  width:20rpx;
-  border-top:2px solid #b2b2b2; 
-  border-right: 2px solid #b2b2b2;
-  transform: rotate(45deg);
-  margin-left: 5rpx;
+  text-align: center;
 }
 
 .tab {
   width: 100%;
-  background: #FA4F7D;
+  background:linear-gradient(to top right,#FA4F7D,rgb(255,111,110));
   height: 100rpx;
   line-height: 80rpx;
   z-index: 9999;
@@ -87,7 +77,7 @@
 
 .search {
   width: 100%;
-  background: #FA4F7D;
+  background:linear-gradient(to bottom right,#FA4F7D,rgb(255,111,110));
 }
 
 .search_arr {
