--- a/hiket-wx/pages/index/index.wxml
+++ b/hiket-wx/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <!--<import src="../../template/index_sections/index_sections.wxml"/>-->
-<import src="../../template/img_col/img_col.wxml"/>
+<import src="../../template/img_col/img_col.wxml" />
 
 <view class="page">
     <!--搜索框-->
@@ -8,68 +8,60 @@
         <view class="search">
             <view class="search_arr">
                 <icon class="search_icon" size='20' type='search'></icon>
-                <input confirm-type="search" bindconfirm="bindSearch"
-                       placeholder="请输入关键字" value="{{searchValue}}"
-                       bindinput='searchValueInput'/>
+                <input confirm-type="search" bindconfirm="bindSearch" placeholder="请输入关键字" value="{{searchValue}}" bindinput='searchValueInput' />
             </view>
         </view>
     </view>
     <!--搜索框-->
     <!--选项卡-->
     <view class='tab'>
-        <scroll-view scroll-x="true" class="tab-scroll"
-                     scroll-into-view="toptab_{{currentTab-2}}">
-            <view class="tab-item {{currentTab==-1?'active':''}}"
-                  data-current="-1" bindtap="bindTopTab" id="toptab_-1">嗨市首页
+        <scroll-view scroll-x="true" class="tab-scroll" scroll-into-view="toptab_{{currentTab-2}}">
+            <view class="tab-item {{currentTab==-1?'active':''}}" data-current="-1" bindtap="bindTopTab" id="toptab_-1">嗨市首页
             </view>
-            <view wx:for="{{sections}}" wx:key="{{index}}"
-                  id="{{'toptab_'+index}}"
-                  class="tab-item {{currentTab==index?'active':''}}"
-                  data-current="{{index}}" bindtap="bindTopTab">{{item}}
+            <view wx:for="{{sections}}" wx:key="{{index}}" id="{{'toptab_'+index}}" class="tab-item {{currentTab==index?'active':''}}" data-current="{{index}}" bindtap="bindTopTab">{{item}}
             </view>
         </scroll-view>
     </view>
     <!--选项卡-->
     <!--首页推荐-->
     <view wx:if="{{currentTab==-1}}">
-        <swiper class="swiper" indicator-dots="true"
-                autoplay="true" interval="3000" duration="1000">
+        <swiper class="swiper" indicator-dots="true" autoplay="true" interval="3000" duration="1000">
             <block wx:for="{{topBanner}}" wx:key="{{index}}">
                 <swiper-item>
-                    <image src="{{item}}"
-                           style="position:absolute;z-index:1"
-                           mode="scaleToFill" class="slide-image"/>
+                    <image src="{{item}}" style="position:absolute;z-index:1" mode="scaleToFill" class="slide-image" />
                 </swiper-item>
             </block>
         </swiper>
         <view class="recommend">
-            <image src='../../images/index/down.png' class='recommend_img' style='margin-left: 30%'></image>
+            <!-- <image src='../../images/index/down.png' class='recommend_img' style='margin-left: 30%'></image>
             <text class="recommend_text">今日爆款</text>
-            <image src='../../images/index/down.png' class='recommend_img' style='margin-right: 30%'></image>
+            <image src='../../images/index/down.png' class='recommend_img' style='margin-right: 30%'></image> -->
+            <view class='recommend_block'>
+                <view class='column-item{{columnSelect==0?"-select":""}}' style='margin-right:10rpx;' data-column='0' bindtap='changeColumn'>
+                    每日新品
+                </view>
+            </view>
+            <view class='recommend_block'>
+                <view class='column-item{{columnSelect==1?"-select":""}}' style='margin-left:10rpx;' data-column='1' bindtap='changeColumn'>
+                    今日爆款
+                </view>
+            </view>
         </view>
     </view>
     <!--首页推荐-->
     <!--分类商品-->
     <view wx:else style="background-color: white">
         <view style="display: flex;justify-content:space-around;padding: 10rpx 0">
-            <view wx:for="{{sectionTags[currentTab]}}" wx:if="{{index<4}}"
-                  wx:key="{{index}}"
-                  style="width: 120rpx;height: 160rpx;display: flex;flex-direction:column" data-pattern="{{item}}" bindtap="bindTag">
-                <image style="width: 120rpx;height: 120rpx"
-                       src="{{'../../images/index/tag/'+sectionTagImages[currentTab][index]+'.jpg'}}"
-                       mode="scaleToFill"/>
+            <view wx:for="{{sectionTags[currentTab]}}" wx:if="{{index<4}}" wx:key="{{index}}" style="width: 120rpx;height: 160rpx;display: flex;flex-direction:column" data-pattern="{{item}}" bindtap="bindTag">
+                <image style="width: 120rpx;height: 120rpx" src="{{'../../images/index/tag/'+sectionTagImages[currentTab][index]+'.jpg'}}" mode="scaleToFill" />
                 <text style="width: 120rpx;color: darkgray;text-align: center">
                     {{item}}
                 </text>
             </view>
         </view>
         <view style="display: flex;justify-content:space-around;padding: 10rpx 0">
-            <view wx:for="{{sectionTags[currentTab]}}" wx:if="{{index>3}}"
-                  wx:key="{{index}}"
-                  style="width: 120rpx;height: 160rpx;display: flex;flex-direction:column" data-pattern="{{item}}" bindtap="bindTag">
-                <image style="width: 120rpx;height: 120rpx"
-                       src="{{'../../images/index/tag/'+sectionTagImages[currentTab][index]+'.jpg'}}"
-                       mode="scaleToFill"/>
+            <view wx:for="{{sectionTags[currentTab]}}" wx:if="{{index>3}}" wx:key="{{index}}" style="width: 120rpx;height: 160rpx;display: flex;flex-direction:column" data-pattern="{{item}}" bindtap="bindTag">
+                <image style="width: 120rpx;height: 120rpx" src="{{'../../images/index/tag/'+sectionTagImages[currentTab][index]+'.jpg'}}" mode="scaleToFill" />
                 <text style="width: 120rpx;color: darkgray;text-align: center">
                     {{item}}
                 </text>
@@ -85,9 +77,7 @@
     <!--占位符-->
     <tabbar tabbar="{{tabbar}}"></tabbar>
 </view>
-<modal title="提示" hidden="{{modalHidden}}" confirm-text="前往认证"
-       cancel-text="暂不认证" bindconfirm="modalBindConfirm"
-       bindcancel="modalBindCancel">
+<modal title="提示" hidden="{{modalHidden}}" confirm-text="前往认证" cancel-text="暂不认证" bindconfirm="modalBindConfirm" bindcancel="modalBindCancel">
     <view wx:if="{{!hasUserInfo}}">
         <text>检测到你未进行微信认证</text>
     </view>
