--- a/hiket-wx/pages/index/index.wxss
+++ b/hiket-wx/pages/index/index.wxss
@@ -11,13 +11,10 @@
 
 .recommend {
   display: flex;
-  /* width: 100%; */
   height: 100rpx;
-  /* background: linear-gradient(to right, #FA4F7D, rgb(250, 166, 166)); */
+  margin: 0 20rpx;
   align-items:center;
   margin-top: 20rpx;
-  border-radius: 15rpx;
-  /* border: 2rpx solid #ff4f64; */
 }
 
 .recommend_img {
@@ -25,10 +22,25 @@
   width: 50rpx;
 }
 
-.recommend_text {
+.recommend_block {
+  width: 50%;
+}
+
+.column-item {
   font-size: 45rpx;
-  flex: 1;
   text-align: center;
+  border: 1rpx solid #ff4f64;
+  padding: 15rpx 20rpx;
+  border-radius: 30rpx;  
+}
+
+.column-item-select {
+  font-size: 45rpx;
+  text-align: center;
+  border: 1rpx solid #ff4f64;
+  padding: 15rpx 20rpx;
+  border-radius: 35rpx;
+  background: linear-gradient(to top right,#FA4F7D,rgb(255,111,110));
 }
 
 .tab {
